--- a/src/index.css
+++ b/src/index.css
@@ -57,3 +57,12 @@ h3 {
   max-width: 1000px;
   margin: 0 auto;
 }
+
+@media(max-width:650px) {
+  h1 {
+    font-size: 2.5rem;
+  }
+  h3 {
+    font-size: 1.5rem;
+  }
+}
